test/distributions/corrado/factoryMethods/incompatibleArraySize.1-3.good
incompatibleArraySize.chpl:13: error: halt reached - Domain size mismatch in 'stencilDist.createArray' dimension 0
